--- a/style.css
+++ b/style.css
@@ -1,3 +1,17 @@
 body{
-  background: #000;
+  background: #fff;
+}
+table{
+  width: 100%
+}
+
+table,th,td{
+  border: 1px solid red;
+  font: 12px tahoma;
+  border-collapse: collapse;
+  text-align: center;
+  padding: 10px
+}
+tr:nth-child(even){
+  background: #ccc;
 }
