--- a/style.css
+++ b/style.css
@@ -1,3 +1,9 @@
+*{
+  margin: 0;
+  padding: 0;
+  border: 0;
+}
+
 body{
   /*background: #fff;*/
 }
@@ -32,7 +38,8 @@ a:hover{
 
 a:visited{
   color: #666;
-}  /*زمانی که روی لینک کلیک میکنیم*/
+}
+/*زمانی که روی لینک کلیک میکنیم*/
 
 a:focus{
   color: green;
@@ -41,4 +48,10 @@ a:focus{
 
 a:active{
   color: black;
+}
+
+li{
+  list-style:initial;
+  font-family: tahoma;
+  font-size: 12px;
 }
