--- a/style.css
+++ b/style.css
@@ -1,57 +1,59 @@
 *{
-  margin: 0;
-  padding: 0;
-  border: 0;
+     margin: 0;
+     padding: 0;
+     border: 0;
 }
+ body{
+     background-color: #eee;
+     background-image:url('images/cooking2.jpg');
+     background-position:center center;
+     background-size: cover;
+     background-repeat: no-repeat;
+     background-attachment: fixed;
+     
 
-body{
-  /*background: #fff;*/
+     color: #222;
+     font: tahoma;
+     font-size: 12px;
 }
-table{
-  width: 100%
+ table{
+     width: 100%
 }
-
-table,th,td{
-  border: 1px solid red;
-  font: 12px tahoma;
-  border-collapse: collapse;
-  text-align: center;
-  padding: 10px
+ table,th,td{
+     border: 1px solid red;
+     font: 12px tahoma;
+     border-collapse: collapse;
+     text-align: center;
+     padding: 10px
 }
-tr:nth-child(even){
-  background: #ccc;
+ tr:nth-child(even){
+     background: #ccc;
 }
-
-
-a{
-  color: #222;
-  text-decoration: none;
-  font-family: tahoma;
-  font-size: 12px;
+ a{
+     color: #222;
+     text-decoration: none;
+     font-family: tahoma;
+     font-size: 12px;
 }
-
 /* زمانی که نشانگر موس روی لینک هست*/
-a:hover{
-  background: blue;
+ a:hover{
+     background: rgb(0, 200, 0);
 }
 /*زمانی که ما لینک رو یک بار باز کردیم */
-
-a:visited{
-  color: #666;
+ a:visited{
+     color: #666;
 }
 /*زمانی که روی لینک کلیک میکنیم*/
-
-a:focus{
-  color: green;
+ a:focus{
+     color: green;
 }
 /*زمانی که لینک اکتیو است */
-
-a:active{
-  color: black;
+ a:active{
+     color: black;
 }
-
-li{
-  list-style:initial;
-  font-family: tahoma;
-  font-size: 12px;
+ li{
+     list-style:initial;
+     font-family: tahoma;
+     font-size: 12px;
+     color: rgba(0, 255, 0);
 }
